@@ -2454,3 +2454,4 @@
 ( cvs diff -u -r 1.654.2.2506 -r 1.654.2.2507 configure.ac;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 claws-mail.desktop;  ) > 2.8.1cvs35.patchset
 ( cvs diff -u -r 1.274.2.179 -r 1.274.2.180 src/mainwindow.c;  cvs diff -u -r 1.39.2.35 -r 1.39.2.36 src/mainwindow.h;  cvs diff -u -r 1.79.2.53 -r 1.79.2.54 src/mh.c;  cvs diff -u -r 1.395.2.288 -r 1.395.2.289 src/summaryview.c;  cvs diff -u -r 1.36.2.99 -r 1.36.2.100 src/common/utils.c;  cvs diff -u -r 1.20.2.12 -r 1.20.2.13 src/gtk/Makefile.am;  ) > 2.8.1cvs36.patchset
 ( cvs diff -u -r 1.207.2.153 -r 1.207.2.154 src/folderview.c;  cvs diff -u -r 1.20.2.19 -r 1.20.2.20 src/folderview.h;  cvs diff -u -r 1.274.2.180 -r 1.274.2.181 src/mainwindow.c;  cvs diff -u -r 1.395.2.289 -r 1.395.2.290 src/summaryview.c;  ) > 2.8.1cvs37.patchset
+( cvs diff -u -r 1.28.2.24 -r 1.28.2.25 src/addrindex.c;  cvs diff -u -r 1.1.4.8 -r 1.1.4.9 src/ldapctrl.h;  cvs diff -u -r 1.3.2.16 -r 1.3.2.17 src/ldapquery.c;  ) > 2.8.1cvs38.patchset
